--- a/index.html
+++ b/index.html
@@ -17,19 +17,116 @@
           <form id="arrivalForm">
             <div class="form-group">
               <label for="arrival">Africa:</label>
-              <input type="text" class="form-control" name="input1month" id="input1month" placeholder="Enter the month" value="">
+              <select id="input1month">
+                  <option value="October 2017">October 2017</option>
+                  <option>November 2017</option>
+                  <option>December 2017</option>
+                  <option>Janaury 2018</option>
+                  <option>February 2018</option>
+                  <option>March 2018</option>
+                  <option>April 2018</option>
+                  <option>May 2018</option>
+                  <option>June 2018</option>
+                  <option>July 2018</option>
+                  <option>August 2018</option>
+                  <option>September 2018</option>
+                  <option>October 2018</option>
+                  <option>November 2018</option>
+                  <option>December 2018</option>
+             </select>
               <input type="text" class="form-control" name="input1amount" id="input1amount" placeholder="Enter the amount" value="">
             </div>
             <div class="form-group">
-              <label>Refugee Admissions for FY18:</label>
-              <input type="text" class="form-control" name="input2" id="input2" value="">
+              <label for="arrival">East Asia:</label>
+              <select id="input2month">
+                  <option value="October 2017">October 2017</option>
+                  <option>November 2017</option>
+                  <option>December 2017</option>
+                  <option>Janaury 2018</option>
+                  <option>February 2018</option>
+                  <option>March 2018</option>
+                  <option>April 2018</option>
+                  <option>May 2018</option>
+                  <option>June 2018</option>
+                  <option>July 2018</option>
+                  <option>August 2018</option>
+                  <option>September 2018</option>
+                  <option>October 2018</option>
+                  <option>November 2018</option>
+                  <option>December 2018</option>
+             </select>
+              <input type="text" class="form-control" name="input2amount" id="input2amount" placeholder="Enter the amount" value="">
             </div>
             <div class="form-group">
-              <label>Percentage:</label>
-              <input type="text" class="form-control" name="input3" id="input3" value="">
+              <label for="arrival">Europe:</label>
+              <select id="input3month">
+                  <option value="October 2017">October 2017</option>
+                  <option>November 2017</option>
+                  <option>December 2017</option>
+                  <option>Janaury 2018</option>
+                  <option>February 2018</option>
+                  <option>March 2018</option>
+                  <option>April 2018</option>
+                  <option>May 2018</option>
+                  <option>June 2018</option>
+                  <option>July 2018</option>
+                  <option>August 2018</option>
+                  <option>September 2018</option>
+                  <option>October 2018</option>
+                  <option>November 2018</option>
+                  <option>December 2018</option>
+             </select>
+              <input type="text" class="form-control" name="input3amount" id="input3amount" placeholder="Enter the amount" value="">
+            </div>
+            <div class="form-group">
+              <label for="arrival">Latin America/Caribbean:</label>
+              <select id="input4month">
+                  <option value="October 2017">October 2017</option>
+                  <option>November 2017</option>
+                  <option>December 2017</option>
+                  <option>Janaury 2018</option>
+                  <option>February 2018</option>
+                  <option>March 2018</option>
+                  <option>April 2018</option>
+                  <option>May 2018</option>
+                  <option>June 2018</option>
+                  <option>July 2018</option>
+                  <option>August 2018</option>
+                  <option>September 2018</option>
+                  <option>October 2018</option>
+                  <option>November 2018</option>
+                  <option>December 2018</option>
+             </select>
+              <input type="text" class="form-control" name="input4amount" id="input4amount" placeholder="Enter the amount" value="">
+            </div>
+            <div class="form-group">
+              <label for="arrival">Near East/South Asia:</label>
+              <select id="input5month">
+                  <option value="October 2017">October 2017</option>
+                  <option>November 2017</option>
+                  <option>December 2017</option>
+                  <option>Janaury 2018</option>
+                  <option>February 2018</option>
+                  <option>March 2018</option>
+                  <option>April 2018</option>
+                  <option>May 2018</option>
+                  <option>June 2018</option>
+                  <option>July 2018</option>
+                  <option>August 2018</option>
+                  <option>September 2018</option>
+                  <option>October 2018</option>
+                  <option>November 2018</option>
+                  <option>December 2018</option>
+             </select>
+              <input type="text" class="form-control" name="input5amount" id="input5amount" placeholder="Enter the amount" value="">
             </div>
           </form>
           <button type="" id="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8">
+          <a href="tracker.html">View updated tracker.</a>
         </div>
       </div>
     </div>
