--- a/index.html
+++ b/index.html
@@ -13,120 +13,55 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
-          <h3>Please update arrival numbers using the form below.</h3>
+          <h3>Please update arrival numbers using the form below.</h3><hr>
           <form id="arrivalForm">
             <div class="form-group">
-              <label for="arrival">Africa:</label>
-              <select id="input1month">
-                  <option value="October 2017">October 2017</option>
-                  <option>November 2017</option>
-                  <option>December 2017</option>
-                  <option>Janaury 2018</option>
-                  <option>February 2018</option>
-                  <option>March 2018</option>
-                  <option>April 2018</option>
-                  <option>May 2018</option>
-                  <option>June 2018</option>
-                  <option>July 2018</option>
-                  <option>August 2018</option>
-                  <option>September 2018</option>
-                  <option>October 2018</option>
-                  <option>November 2018</option>
-                  <option>December 2018</option>
-             </select>
-              <input type="text" class="form-control" name="input1amount" id="input1amount" placeholder="Enter the amount" value="">
+              <h4>Total</h4>
+              <label>Enter the total amount:</label>
+              <input type="text" class="form-control" name="total" id="total" value="">
             </div>
             <div class="form-group">
-              <label for="arrival">East Asia:</label>
-              <select id="input2month">
-                  <option value="October 2017">October 2017</option>
-                  <option>November 2017</option>
-                  <option>December 2017</option>
-                  <option>Janaury 2018</option>
-                  <option>February 2018</option>
-                  <option>March 2018</option>
-                  <option>April 2018</option>
-                  <option>May 2018</option>
-                  <option>June 2018</option>
-                  <option>July 2018</option>
-                  <option>August 2018</option>
-                  <option>September 2018</option>
-                  <option>October 2018</option>
-                  <option>November 2018</option>
-                  <option>December 2018</option>
-             </select>
-              <input type="text" class="form-control" name="input2amount" id="input2amount" placeholder="Enter the amount" value="">
+              <h4>Africa</h4>
+              <label>Enter the Timeframe:</label>
+              <input type="text" class="form-control" name="input1time" id="input1time" placeholder="eg: Oct 28 - Nov 13" value="">
+              <label>Enter the Amount:</label>
+              <input type="text" class="form-control" name="input1amount" id="input1amount" value="">
             </div>
             <div class="form-group">
-              <label for="arrival">Europe:</label>
-              <select id="input3month">
-                  <option value="October 2017">October 2017</option>
-                  <option>November 2017</option>
-                  <option>December 2017</option>
-                  <option>Janaury 2018</option>
-                  <option>February 2018</option>
-                  <option>March 2018</option>
-                  <option>April 2018</option>
-                  <option>May 2018</option>
-                  <option>June 2018</option>
-                  <option>July 2018</option>
-                  <option>August 2018</option>
-                  <option>September 2018</option>
-                  <option>October 2018</option>
-                  <option>November 2018</option>
-                  <option>December 2018</option>
-             </select>
-              <input type="text" class="form-control" name="input3amount" id="input3amount" placeholder="Enter the amount" value="">
+              <h4>East Asia</h4>
+              <label>Enter the Timeframe:</label>
+              <input type="text" class="form-control" name="input2time" id="input2time" placeholder="eg: Oct 28 - Nov 13" value="">
+              <label>Enter the Amount:</label>
+              <input type="text" class="form-control" name="input2amount" id="input2amount" value="">
             </div>
             <div class="form-group">
-              <label for="arrival">Latin America/Caribbean:</label>
-              <select id="input4month">
-                  <option value="October 2017">October 2017</option>
-                  <option>November 2017</option>
-                  <option>December 2017</option>
-                  <option>Janaury 2018</option>
-                  <option>February 2018</option>
-                  <option>March 2018</option>
-                  <option>April 2018</option>
-                  <option>May 2018</option>
-                  <option>June 2018</option>
-                  <option>July 2018</option>
-                  <option>August 2018</option>
-                  <option>September 2018</option>
-                  <option>October 2018</option>
-                  <option>November 2018</option>
-                  <option>December 2018</option>
-             </select>
-              <input type="text" class="form-control" name="input4amount" id="input4amount" placeholder="Enter the amount" value="">
+              <h4>Europe</h4>
+              <label>Enter the Timeframe:</label>
+              <input type="text" class="form-control" name="input3time" id="input3time" placeholder="eg: Oct 28 - Nov 13" value="">
+              <label>Enter the Amount:</label>
+              <input type="text" class="form-control" name="input3amount" id="input3amount" value="">
             </div>
             <div class="form-group">
-              <label for="arrival">Near East/South Asia:</label>
-              <select id="input5month">
-                  <option value="October 2017">October 2017</option>
-                  <option>November 2017</option>
-                  <option>December 2017</option>
-                  <option>Janaury 2018</option>
-                  <option>February 2018</option>
-                  <option>March 2018</option>
-                  <option>April 2018</option>
-                  <option>May 2018</option>
-                  <option>June 2018</option>
-                  <option>July 2018</option>
-                  <option>August 2018</option>
-                  <option>September 2018</option>
-                  <option>October 2018</option>
-                  <option>November 2018</option>
-                  <option>December 2018</option>
-             </select>
-              <input type="text" class="form-control" name="input5amount" id="input5amount" placeholder="Enter the amount" value="">
+              <h4>Latin America/Carribean</h4>
+              <label>Enter the Timeframe:</label>
+              <input type="text" class="form-control" name="input4time" id="input4time" placeholder="eg: Oct 28 - Nov 13" value="">
+              <label>Enter the Amount:</label>
+              <input type="text" class="form-control" name="input4amount" id="input4amount" value="">
+            </div>
+            <div class="form-group">
+              <h4>Near East/South Asia</h4>
+              <label>Enter the Timeframe:</label>
+              <input type="text" class="form-control" name="input5time" id="input5time" placeholder="eg: Oct 28 - Nov 13" value="">
+              <label>Enter the Amount:</label>
+              <input type="text" class="form-control" name="input5amount" id="input5amount" value="">
             </div>
           </form>
           <button type="" id="submit" class="btn btn-primary">Submit</button>
         </div>
-      </div>
+      </div><hr>
       <div class="row">
         <div class="col-lg-8">
-          <a href="tracker.html">View updated tracker.</a>
+          <h3><a href="tracker.html">View updated tracker.</a></h3>
         </div>
       </div>
     </div>
