--- a/tracker.html
+++ b/tracker.html
@@ -12,16 +12,41 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="col-lg-12">
+            <p>Totals <span id="totals"></span></p>
+          </div>
+          <div class="col-lg-12">
+            <p>Arrivals <span id="timeframe"></span></p>
+          </div>
           <div class="col-lg-6">
             <p>Africa</p>
           </div>
           <div class="col-lg-6">
             <p id="africa"></p>
           </div>
-          <p>East Asia</p>
+          <div class="col-lg-6">
+            <p>East Asia</p>
           </div>
           <div class="col-lg-6">
             <p id="ea"></p>
+          </div>
+          <div class="col-lg-6">
+            <p>Europe</p>
+          </div>
+          <div class="col-lg-6">
+            <p id="europe"></p>
+          </div>
+          <div class="col-lg-6">
+            <p>Latin America</p>
+          </div>
+          <div class="col-lg-6">
+            <p id="la"></p>
+          </div>
+          <div class="col-lg-6">
+            <p>Near East</p>
+          </div>
+          <div class="col-lg-6">
+            <p id="ne"></p>
           </div>
       </div>
     </div>
