--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <input type="text" class="form-control" name="input5amount" id="input5amount" value="">
             </div>
           </form>
-          <button type="" id="submit" class="btn btn-primary">Submit</button>
+          <button type="" id="rcusa-submit" class="btn btn-primary">Submit</button>
         </div>
       </div><hr>
       <div class="row">
