--- a/tracker.html
+++ b/tracker.html
@@ -1,57 +1,38 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hello, world!</title>
+    <title></title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
+    <div class="rcusa-tracker-container">
       <div class="row">
-        <div class="col-lg-12">
-            <p>Totals <span id="totals"></span></p>
-          </div>
-          <div class="col-lg-12">
-            <p>Arrivals <span id="timeframe"></span></p>
-          </div>
-          <div class="col-lg-6">
-            <p>Africa</p>
-          </div>
-          <div class="col-lg-6">
-            <p id="africa"></p>
-          </div>
-          <div class="col-lg-6">
-            <p>East Asia</p>
-          </div>
-          <div class="col-lg-6">
-            <p id="ea"></p>
-          </div>
-          <div class="col-lg-6">
-            <p>Europe</p>
-          </div>
-          <div class="col-lg-6">
-            <p id="europe"></p>
-          </div>
-          <div class="col-lg-6">
-            <p>Latin America</p>
-          </div>
-          <div class="col-lg-6">
-            <p id="la"></p>
-          </div>
-          <div class="col-lg-6">
-            <p>Near East</p>
-          </div>
-          <div class="col-lg-6">
-            <p id="ne"></p>
-          </div>
+        <div>
+            <span>FY18 Total</span>&nbsp;<span id="totals"></span>
+        </div>
+        <div>
+            <span>Arrivals from</span> &nbsp;<span id="timeframe"></span>
+        </div>
+        <div>
+            <span>Africa</span> &nbsp; &nbsp;<span id="africa"></span>
+        </div>
+        <div>
+          <span>East Asia</span> &nbsp; &nbsp;<span id="ea"></span>
+        </div>
+        <div>
+          <span>Europe</span> &nbsp; &nbsp;<span id="europe"></span>
+        </div>
+        <div>
+          <span>Latin America</span> &nbsp; &nbsp;<span id="la"></span>
+        </div>
+        <div>
+            <span>Near East</span> &nbsp; &nbsp;<span id="ne"></span>
+        </div>
       </div>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    
     <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
     <script>
       // Initialize Firebase
@@ -64,10 +45,7 @@
         messagingSenderId: "177811423780"
       };
       firebase.initializeApp(config);
-    </script>
-    <script src="tracker.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+      </script>
+      <script src="tracker.js"></script>
   </body>
 </html>
